k8s/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic
  labels:
    istio-injection: enabled
    name: petclinic
