k8s/istio/virtual-service-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: petclinic-api-gateway
  namespace: petclinic
spec:
  hosts:
  - "*"
  gateways:
  - petclinic-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: api-gateway
        port:
          number: 8080
