k8s/istio/authz-policy-deny-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: petclinic
spec:
  {}  # Empty spec = deny all by default
  # This creates a default-deny policy
  # Specific allow policies will override this for authorized traffic
